# wc-rs

./: Cargo.toml  README.md  test.txt  test2.txt
src/: colors.rs  count.rs  main.rs  wc.rs
