[package]
name = "wcrs"
version = "0.1.0"
edition = "2021"
author = "Dhruva Srinivas"
description = "A simple of implementation of GNU wc in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
